# example-poco-timer

./: CMakeLists.txt  build-all.bat  build-debug-rebuild-poco-from-sources.bat  build-debug.bat  build-multi.bat  build-release.bat  conanfile.txt
src/: main.cpp
src/subdir/: TimerExample.cpp  TimerExample.h
